# ObjectiveFunction-client

./: .gitignore  README.md  objfun.cfg  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
ObjectiveFunction_client/: __init__.py  cache.py  common.py  config.py  dfols.py  example.py  manage.py  objective_function.py  objective_function_misfit.py  objective_function_residual.py  objective_function_simobs.py  optimise.py  parameter.py  proxy.py
docs/: api.rst  conf.py  configuration.rst  index.rst  objfun.rst
example/: README.rst  example-dfols.cfg  example-nlopt.cfg  example-simobs.cfg  example.sh  install.sh  optimise-dfols-eddie.cylc  optimise-dfols-local.cylc  optimise-nlopt-local.cylc
tests/: conftest.py  test_ObjectiveFunction.py  test_ObjectiveFunction_misfit.py  test_ObjectiveFunction_residual.py  test_ObjectiveFunction_simobs.py  test_cache.py  test_parameter_float.py  test_parameter_int.py  test_proxy.py
