[metadata]
name = ObjectiveFunction-client
version = attr: ObjectiveFunction_client.__version__
author = Magnus Hagdorn
author_email = magnus.hagdorn@ed.ac.uk
url = https://github.com/optclim/ObjectiveFunction-client
description = Client ObjectiveFunction optimisation framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license = GPL3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
   requests
   configobj
   numpy >= 1.21.0
   dfo-ls

[options.entry_points]
console_scripts =
    objfun-manage=ObjectiveFunction_client.manage:main
    objfun-nlopt = ObjectiveFunction_client.optimise:main
    objfun-dfols = ObjectiveFunction_client.dfols:main
    objfun-example-model = ObjectiveFunction_client.example:main

[options.extras_require]
docs =
    sphinx < 4.0
    sphinx_rtd_theme
lint = flake8 >= 3.5.0
testing =
    pytest
    requests-mock

[options.package_data]
* = README.md

[build_sphinx]
project = ObjectiveFunction-client
release = attr: ObjectiveFunction_client.__version__
source-dir = docs

[coverage:run]
branch = True
omit =
   ObjectiveFunction_client/manage.py

[coverage:report]
show_missing = True
skip_covered = True

[tool:pytest]
minversion = 4.6
addopts = -ra -q
testpaths =
    tests
